add: get recognized photo

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,13 +7,12 @@
     <title>Webcam</title>
 </head>
 <body>
-    <div class="cameraWrapper"> 
-        <div class="cameraButtonWrapper">
-            <button id="send_photo">Send</button>
-        </div>
+    <div class="cameraWrapper">         
+        <div id="recognized_photo" class="recognitionPhoto"></div>   
         <video id="webcam" autoplay></video>   
-        <div id="recognition_result"></div>    
+        <div id="recognition_result" ></div>
     </div>
+    
     <script src="../static/script.js"></script>
 </body>
 </html>
