--- a/app/static/style.css
+++ b/app/static/style.css
@@ -9,8 +9,17 @@ button{
 }
 
 video{
+    display: none;
+    width: 50px;
+    height: 50px;
+}
+
+.recognitionPhoto{
     width: 90vw;
     height: 75vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .cameraWrapper{
