--- a/app/static/style.css
+++ b/app/static/style.css
@@ -8,10 +8,18 @@ button{
     border-radius: 8px;
 }
 
+video, canvas{
+    width: 640px;
+    height: 480px;
+}
+
 video{
-    display: none;
-    width: 50px;
-    height: 50px;
+    position: fixed;
+}
+
+canvas{
+    position: relative;
+    z-index: 1;
 }
 
 .recognitionPhoto{
