--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,9 @@
     <div class="cameraWrapper">              
         <canvas id="canvas"></canvas>        
         <video id="webcam" autoplay></video>   
+        
+        <canvas id="rectangleCanvas"></canvas>
+        <canvas id="croppedCanvas"></canvas>
         <div id="recognition_result" ></div>
     </div>
     
